--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# configuration for https://travis-ci.org/HashEngineering/dashj
+# configuration for https://travis-ci.org/alarmxcore/alarmxj
 sudo: false
 dist: trusty
 language: java
