--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,15 +20,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.dashj</groupId>
-        <artifactId>dashj-parent</artifactId>
+        <groupId>org.alarmxj</groupId>
+        <artifactId>alarmxj-parent</artifactId>
         <version>0.14.4.4</version>
     </parent>
 
-    <artifactId>dashj-core</artifactId>
+    <artifactId>alarmxj-core</artifactId>
 
-    <name>dashj</name>
-    <description>A Java Dash library</description>
+    <name>alarmxj</name>
+    <description>A Java Alarmx library</description>
 
     <packaging>jar</packaging>
 
@@ -353,7 +353,7 @@
             <version>3.2</version>
             <scope>test</scope>
         </dependency>
-        <!-- dashj consumers are expected to provide their own SLF4J adapters
+        <!-- alarmxj consumers are expected to provide their own SLF4J adapters
              such as logback, slf4j-log4j12, slf4j-jcl and so on
              see http://www.slf4j.org/faq.html -->
         <dependency>
