--- a/wallettemplate/pom.xml
+++ b/wallettemplate/pom.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.dashj</groupId>
-        <artifactId>dashj-parent</artifactId>
+        <groupId>org.alarmxj</groupId>
+        <artifactId>alarmxj-parent</artifactId>
         <version>0.14.4.4</version>
     </parent>
 
-    <groupId>org.dashj</groupId>
+    <groupId>org.alarmxj</groupId>
     <artifactId>wallettemplate</artifactId>
 
-    <name>dashj Wallet-Template</name>
+    <name>alarmxj Wallet-Template</name>
 
     <build>
         <plugins>
@@ -57,8 +57,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.dashj</groupId>
-            <artifactId>dashj-core</artifactId>
+            <groupId>org.alarmxj</groupId>
+            <artifactId>alarmxj-core</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
